BusOne02/src/objects/Consent_Type_vod__c.object
<CustomObject>
    <description>Consent Type drives the consent, disclaimer, product list, expiration date for each channel on the consent capture page. Master</description>
    <fields>
        <fullName>Channel_Label_vod__c</fullName>
        <description>Label used to display the channel on the consent capture page.</description>
        <label>Channel Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Source_vod__c</fullName>
        <description>Store the values of the pull through fields that will be used to create the picklist values for Channel Fields. This is a double semi colon delimited set. Eg - Account.Email;;Account.Email2__c</description>
        <label>Channel Source</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Custom_Duration_vod__c</fullName>
        <description>Duration, in months, for which the consent captured is valid for.</description>
        <inlineHelpText>Duration is in months</inlineHelpText>
        <label>Consent Custom Duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consent_Expires_In_vod__c</fullName>
        <description>Sets the Opt_Expiration_Date_vod on Multichannel_Consent_vod for Opt ins from the Capture_Datetime_vod. If NULL, then the Opt_Expiration_Date_vod is NULL as well.</description>
        <label>Consent Expires In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom_Duration_vod</fullName>
                </value>
                <value>
                    <fullName>One_Year_vod</fullName>
                </value>
                <value>
                    <fullName>End_Of_Calendar_Year_vod</fullName>
                </value>
                <value>
                    <fullName>End_Of_Next_Calendar_Year_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Header_vod__c</fullName>
        <description>This is a Master-Detail to the Consent_Header_vod record.</description>
        <label>Consent Header</label>
        <referenceTo>Consent_Header_vod__c</referenceTo>
        <relationshipLabel>Consent Types</relationshipLabel>
        <relationshipName>Consent_Type_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Default_Consent_Type_vod__c</fullName>
        <description>Defines the default consent type that will be applied for the channel if no prior consents exist. For Approved Email, Account.Approved_Email_Consent_Type_vod takes precedence.</description>
        <label>Default Consent Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implicit_vod</fullName>
                </value>
                <value>
                    <fullName>Explicit_vod</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaimer_Text_vod__c</fullName>
        <description>The text that will be displayed on the review panel.</description>
        <label>Disclaimer Text</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>The order in which the channels appear on the summary page.</description>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Double_Opt_In_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Double_Opt_In_vod when checked turns on the Double Op In feature for the Channel.</description>
        <label>Double Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Disclaimer_Text_vod__c</fullName>
        <description>The text that will be displayed on the review panel for opt outs.</description>
        <label>Opt Out Disclaimer Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Preference_vod__c</fullName>
        <description>Defines which products/ sub channels are shown on the Consent Capture page for the channel.</description>
        <label>Product Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All_Content_Types_vod</fullName>
                </value>
                <value>
                    <fullName>All_Products_vod</fullName>
                </value>
                <value>
                    <fullName>All_Lines_vod</fullName>
                </value>
                <value>
                    <fullName>My_Setup_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Restrictive_My_Setup_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zvod_Consent_Activity_Tracking_vod__c</fullName>
        <description>The text displayed on the review panel for activity tracking. A checkbox will be added before the text that is stored in this field.</description>
        <label>zvod_Consent_Activity_Tracking_vod</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zvod_Consent_Default_Consent_Text_vod__c</fullName>
        <description>The text that will be displayed on the review panel. A checkbox will be added before the text that is stored in zvodc_Consent_Text_vod.</description>
        <label>zvod_Consent_Default_Consent_Text_vod</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zvod_Consent_Line_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Veeva markup field that drives the visibility and pagelayout location of the consent changes on review panel for the the recordtype.</description>
        <label>zvod_Consent_Line_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Opt_Out_Consent_Line_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Veeva markup field that drives the visibility and pagelayout location of the consent changes on review panel for opt outs of the recordtype.</description>
        <label>zvod_Opt_Out_Consent_Line_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Signature_Capture_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Veeva markup field and if it is on the pagelayout, signature capture and/or paper consent id capture is possible and when captured, the signature data/ paper consent id is copied to Signature_Data_vod/ Signature_ID_vod field on Multichannel_Consent_vod record for the corresponding recordtype.</description>
        <label>zvod_Signature_Capture_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Consent Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Types</pluralLabel>
    <recordTypes>
        <fullName>Approved_Email_vod</fullName>
        <active>true</active>
        <description>Consent_Type_vod recordtype that will drive the behavior for Approved Email</description>
        <label>Approved_Email_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLM_vod</fullName>
        <active>true</active>
        <description>Consent_Type_vod recordtype that will drive the behavior for CLM</description>
        <label>CLM_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>WeChat_vod</fullName>
        <active>true</active>
        <description>Consent_Type_vod recordtype that will drive the behavior for Approved WeChat</description>
        <label>WeChat_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>